--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <img href="#" src="img/LogoZebraBlanco.png" alt="Logo Zebra">
 </div>
 <div class="header__container_menu">
-    <div class="header__container_icon-menu">
+    <div  class="header__container_icon-menu">
         <i class="fa-solid fa-circle-chevron-down"></i>
     </div>
-    <ul class="header__container_links">
+    <ul id="menu" class="header__container_links">
         <li><a href="">Nosotros</a></li>
         <li><a href="">Catering</a></li>
         <li><a href="">Fotos</a></li>
@@ -31,6 +31,7 @@
         </div>
 <div class="main__container-logo">
     <img src="img/LogoZebraBlanco.png" alt="">
+    <h2 class="typing"></h2>
 </div>
 
     </main>
@@ -38,6 +39,6 @@
     
 
 
-
+<script src="script.js"></script>
 </body>
 </html>
